@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule v6.3.0;
+package Schedule v6.3.1;
 
 use strict;
 use warnings;
@@ -53,7 +53,7 @@ my $tests = [[], [], []];
 my $status = undef;
 my $title = undef;
 my $text = undef;
-my $qtime = '%T';
+my $qtime = '%R';
 my $stime = '%T->';
 my $etime = '->%T %d.%m.%y';
 
