@@ -7,7 +7,7 @@
 # common parts of schedule and schedule-server which are always needed
 
 require 5.012;
-package Schedule::Connect v6.3.0;
+package Schedule::Connect v6.3.1;
 
 use strict;
 use warnings;
@@ -25,6 +25,10 @@ use Schedule::Helpers qw(:COLOR :IS :SYSQUERY);
 
 our $VERSION; # auto-initialized to the version of Schedule::Connect
 
+my $version620 = version->declare('v6.2.0');
+my $version621 = version->declare('v6.2.1');
+my $version630 = version->declare('v6.3.0');
+
 # The default minimal/maximal/exact accepted versions for the modules/programs.
 # If undefined, no corresponding restriction is required.
 
@@ -34,7 +38,7 @@ my $extversion = undef;
 
 # The client accepts servers in the followin interval:
 
-my $servermin = $VERSION,
+my $servermin = $version630;
 my $serversup = version->declare('v7.0.0');
 my $serversupallowed = '';
 
@@ -47,20 +51,17 @@ my $serversupallowed = '';
 # For modules not appearing here, the above defaults apply.
 # If "undefined", no corresponding restriction is required.
 
-my $version620 = version->declare('v6.2.0');
-my $version621 = version->declare('v6.2.1');
-
 my %minversion = (
 # temporary:
 	'Schedule' => $VERSION,
 	'ScheduleServer' => $version620,
 	'Schedule::Client::Clientfuncs' => $version621,
-	'Schedule::Client::Cmd::List' => $VERSION,
-	'Schedule::Client::Cmd::Queue' => $VERSION,
+	'Schedule::Client::Cmd::List' => $version630,
+	'Schedule::Client::Cmd::Queue' => $version630,
 	'Schedule::Client::Scheduleman' => $VERSION,
 	'Schedule::Helpers' => $version620,
-	'Schedule::Server::Loop' => $VERSION,
-	'Schedule::Server::Serverfuncs' => $VERSION,
+	'Schedule::Server::Loop' => $version630,
+	'Schedule::Server::Serverfuncs' => $version630,
 	'Schedule::Server::Serverman' => $version620,
 # Keep the following always:
 	'Schedule::Connect' => undef
@@ -330,7 +331,7 @@ sub get_options {
 	my $s = shift();
 	my @passfile = ();
 	my $quiet = 0;
-	Getopt::Long::Configure(qw(bundling gnu_compat no_permute));
+	Getopt::Long::Configure(qw(gnu_getopt));
 	Getopt::Long::GetOptions(
 	'tcp|t', sub { $s->tcp(1) },
 	'local|l', sub { $s->tcp('') },
